[package]
name = "svn_check_config_xml"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-recursion = "0.3.2"
async-std = { version = "1.10.0", features = ["attributes"] }
clap = "2.33.3"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde-xml-rs = "0.5.0"
svn-cmd = { git = "https://github.com/rajputrajat/svn-cmd.git" }
svn-list-parallel-rs = { path = "../svn_list_filter_rs" }
toml = "0.5.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
